<resources>

    <string name="title_activity_main_app">SpoQ</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="password_hint">*</string>
    <string name="email_hint">@</string>
    <string name="sing_in_button">Sign in</string>
    <string name="sign_up_form_nickname">Nickname</string>
    <string name="sign_up_form_email">Email </string>
    <string name="sign_up_form_password1">Password</string>
    <string name="sign_up_form_password_confirm">Confirm password</string>
    <string name="sign_up_submit_b">Submit</string>
    <string name="mainAppActivity_signOut_b">Sign Out</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Here will be section with statistics </string>
    <string name="play_with_friend">Play with Friend</string>
    <string name="random_game">random game</string>
    <string name="statistics_title_fragment">Statistics</string>
    <string name="app_name">SpoQ</string>
    <string name="preference_file_key">testPRefs</string>
    <string name="savedUserInfoObject" />
</resources>
