<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInActivity">


    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/email_hint"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <EditText
        android:id="@+id/password_edit_text_signIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/editText"
        app:layout_constraintStart_toStartOf="@+id/editText"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <Button
        android:id="@+id/signIn_signIn_b"
        android:layout_width="87dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/sing_in_button"
        app:layout_constraintEnd_toEndOf="@+id/password_edit_text_signIn"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/password_edit_text_signIn"
        app:layout_constraintTop_toBottomOf="@+id/password_edit_text_signIn" />

    <Button
        android:id="@+id/signIn_signUp_b"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/sign_up_button"
        app:layout_constraintEnd_toEndOf="@+id/password_edit_text_signIn"
        app:layout_constraintStart_toStartOf="@+id/signIn_signIn_b"
        app:layout_constraintTop_toBottomOf="@+id/signIn_signIn_b" />

</android.support.constraint.ConstraintLayout>